--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                    <li><a href="">Products</a></li>
                    <li><a href="">Blog</a></li>
                    <li><a href="">Contact</a></li>
+                   <li><a href="">Contact</a></li>
                </ul>
            </nav>
             
